# score-my-recipe

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: quality.yml
docs/: DESIGN.md  dev-quick-start.md  how-to-generate-api-schema.md  openapi.json
frontend/: .TODO.md.swp  .env.example  AGENTS.md  TODO.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/scripts/: i18n-sync.ts
frontend/src/: api-schema.d.ts  app.css  globals.d.ts  hooks.server.ts
frontend/src/lib/: offLink.ts
frontend/src/lib/api/: recipe.ts  taxonomy.ts
frontend/src/lib/i18n/: index.ts
frontend/src/lib/i18n/messages/: en-US.json  fr-FR.json
frontend/src/lib/types/: ingredient.ts  ingredientsList.ts
frontend/src/lib/ui/: Footer.svelte  IngredientLine.svelte  Logo.svelte  Navbar.svelte  Tags.svelte  TagsString.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/add/: +page.svelte
frontend/src/routes/score/: +page.svelte
frontend/src/routes/site.webmanifest/: +server.ts
scripts/: dev-setup.sh
server/: AGENTS.md  justfile  pyproject.toml
server/api/: api.py  cli.py  off.py  recipes.py  settings.py  types.py
server/tests/: test_get_labels.py  test_get_origins.py  test_health.py  test_origins_autocomplete.py  test_parse_text.py
server/tests/inputs/: labels.full.json
