[project]
name = "score-my-recipe"
version = "0.1.0"
description = "A tool to compute Green-Score of recipes"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "uvicorn>=0.47.0",
    "openfoodfacts>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15",
    "ty>=0.0.53"
]

[tool.ruff]
line-length = 100
